# ai_agent

./: .env.example  .gitignore  PROJECT_CONTEXT.md  README.md  pyproject.toml
app/: __init__.py  bootstrap.py  logging_utils.py  models.py  utils.py
app/cleaning/: cleaner.py  rules.py  service.py
app/config/: settings.py
app/ingestion/: chunking.py  service.py
app/llm/: conversation.py  openai_client.py  prompts.py  service.py
app/retrieval/: classifier.py  query_utils.py  service.py
app/runtime/: demo_stack.py
app/scraping/: __init__.py  acba_extractor.py  extractors.py  fetchers.py  inecobank_extractor.py  service.py  sources.py
app/storage/: db.py  repositories.py  vector_store.py
app/telegram_ui/: __init__.py  bot.py
app/voice/: __init__.py  audio.py  interfaces.py  livekit_runtime.py  providers.py  token.py
app/web_ui/: server.py
app/web_ui/static/: app.js  index.html  styles.css
armenian_voice_ai_support_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/clean/acba/branch_locations/: en-about-bank-branches-and-atms.json
data/clean/acba/credits/: en-individuals-loans-collateral-loans-deposit-secured.json  en-individuals-loans-collateral-loans-up-to-30-million.json  en-individuals-loans-consumer-credits-up-to-5-million.json  en-individuals-loans-consumer-credits-usman-varker.json  en-individuals-loans.json  (+29 more)
data/vector_store/: index.json  vectors.npy
scripts/: clean.py  generate_livekit_token.py  ingest.py  init_db.py  run_bot.py  run_demo_stack.py  run_livekit_test_ui.py  run_voice_agent.py  scrape.py
(+75 files in other folders)
